dark mode fixes

--- a/src/components/Finder.css
+++ b/src/components/Finder.css
@@ -143,6 +143,9 @@
           color: var(--white-color);
         }
       }
+      img {
+        filter: brightness(200%);
+      }
     }
     .slider-text {
       background-color: var(--dark-gray-color);
