--- a/src/components/card/CardSchool.css
+++ b/src/components/card/CardSchool.css
@@ -150,39 +150,33 @@
       margin: 0;
     }
 
-    .address,
-    .phone,
-    .schedule {
+    div {
       display: flex;
       align-items: center;
       gap: 7px;
       flex-direction: row;
-      font-size: 15px;
       color: var(--dark-gray-color);
       margin: 0;
       justify-content: center;
-      img {
+
+        p {
+          margin: 0;
+        }
+
+      img{
         width: 20px;
         height: 20px;
-      }
-      p {
-        margin: 0;
       }
     }
 
+    .address,
+    .phone,
+    .schedule {
+      font-size: 15px;
+    }
+
     .education {
-      display: flex;
-      align-items: center;
-      gap: 7px;
-      flex-direction: row;
       font-size: 14px;
-      color: var(--dark-gray-color);
-      margin: 0;
-      justify-content: center;
-      img {
-        width: 20px;
-        height: 20px;
-      }
 
       .education-levels {
         display: flex;
@@ -190,10 +184,6 @@
         align-items: flex-start;
         justify-content: flex-start;
         gap: 5px;
-
-        p {
-          margin: 0;
-        }
       }
     }
   }
@@ -250,6 +240,13 @@
       .education {
         color: var(--white-color);
       }
+
+      div {
+        color: var(--white-color);
+        img{
+          filter: brightness(300%);
+        }
+      } 
     }
 
     button {
